SQuirreL SQL Client Change Log
==============================

2.6.7 (??/??/????)
=================

Bug-Fixes:

2013346: export csv with option "carriage return + linefeed"

2.6.6 (6/13/2008)
================

Bug-Fixes: 

Sybase Plugin: Fixed bug which caused scripting views to always fail.

Fixed a bug which made it difficult to see text that was being edited in a table.

1968270: Displaying unsigned INT as signed INT in column

1858937: Encoding parameter in desktop file wrong

1830649: Focus Loss


2.6.5a (3/8/2008)
================

Bug-Fixes:

1909015: (Classpath screwed up for 2.6.5). Fixed this issue that was produced when using the Windows launch script (squirrel-sql.bat).

1824534: Constraint created twice in generated scripts


2.6.5 (3/2/2008)
================

Bug-Fixes:

1902611: (Oracle) Don't fail on SQL-Plus "SET ..." commands in SQL script; Now, the Oracle plugin skips 
                  over them. 

1596240: Fixed bug which occurred while displaying HSQLDB->Objects->Content, where contents are not shown 
and exceptions are thrown because tables are not being qualified with the schema name.

1769599 fix for permission problem with Windows Vista.  Now we create our temporary path file in a temporary 
location that the user should always be able to write to.  Thanks to user aberdeen61 for contributing the 
fix.

DBCopy Plugin: MS SQLServer tables were created with VARCHAR(8000) columns, regardless of the 
size of the source database table columns.  Now, the length will be the same as the source 
database column.

2.6.4 (1/14/2008)
=================

Bug-Fixes:

DBCopy Plugin: Only attempt to order the tables being copied if there is 
more than one table in the copy set.

Oracle Plugin: Added ability to recognize "create package" and "create package body" 
statements to prevent SQLExceptions from improper statement tokenizing.

Syntax Plugin: Fixed memory leak which caused sessions not to be garbage 
collected.
