@@ -33,7 +33,7 @@ public class Version
 	private static final String APP_NAME = s_stringMgr.getString("Version.appname");
 	private static final int MAJOR_VERSION = 2;
 	private static final int MINOR_VERSION = 6;
-	private static final int RELEASE = 6;
+	private static final int RELEASE = 7;
         private static final String BUGFIX_VERSION=null;
 
 	private static final String COPYRIGHT = s_stringMgr.getString("Version.copyright");
